--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: TIL mostly but let's see.
+title: TIL
 email: akshayagrwl98@gmail.com  
 description: >- # this means to ignore newlines until "baseurl:"
 
